@@ -29,6 +29,7 @@ Emulation fixes:
  - GBA: Fix expected entry point for multiboot ELFs (fixes mgba.io/i/2450)
  - GBA: Fix booting multiboot ROMs with no JOY entrypoint
  - GBA Audio: Adjust PSG sampling rate with SOUNDBIAS
+ - GBA Audio: Sample FIFOs at SOUNDBIAS-set frequency
  - GBA BIOS: Work around IRQ handling hiccup in Mario & Luigi (fixes mgba.io/i/1059)
  - GBA BIOS: Initial HLE timing estimation of UnLz77 functions (fixes mgba.io/i/2141)
  - GBA DMA: Fix DMA source direction bits being cleared (fixes mgba.io/i/2410)
